Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2011-02-25)
----------------

- added the possibility to define a custom label for the cancel button
  and a custom cancel message for each mode. [vincent]

- you can now defined the modes to swtich to once form is processed or
  user cancelled in the 'modes' dictionnary. [vincent]

- added samples + README. [vincent]

- extracted code from Products.plonehrm. [vincent]