@@ -1,0 +1,6 @@
+import unittest
+import doctest
+
+
+OPTIONFLAGS = (doctest.ELLIPSIS |
+               doctest.NORMALIZE_WHITESPACE)
